# AI-ROMS-batch-renamer

./: .actrc  .gitignore  LICENSE  README.md  bun.lockb  package.json  pyproject.toml  requirements.txt  tsconfig.json
.github/: release-drafter.yml
.github/workflows/: release.yml
ai_rom_batch_renamer/: main.py
ai_rom_batch_renamer/classes/: RomFile.py
ai_rom_batch_renamer/modules/: cache.py  regex.py  rename.py  revert.py  utils.py
src/: aiUtils.ts  cacheUtils.ts  consts.ts  index.ts  main.py  renamer.ts  types.ts  utils.ts
src/classes/: RomFile.py
src/modules/: regex.py  rename.py  utils.py
