[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "AI-rom-batch-renamer"
version = "2.0.0"
dynamic = ["dependencies"]
description = "A command line tool for batch renaming ROM files using AI."
readme = "README.md"
license = { file = "LICENSE" }
authors = [{ name = "rozx", email = "lisida900710@gmail.com" }]
requires-python = ">= 3.8"


[project.scripts]
build = "hatchling build"
updateReqs = "pip freeze >> requirements.txt"

[project.urls]
Repository = "https://github.com/rozx/AI-ROMS-batch-renamer"


[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.metadata.hooks.requirements_txt]
files = ["requirements.txt"]
